# model/common.go
@@ -1,0 +1,6 @@
+package model
+
+type PageModel struct {
+	Page     int `json:"page" form:"page" binding:"required,min=1"`
+	PageSize int `json:"pageSize" form:"pageSize" binding:"required,min=1"`
+}
